fix: iOS cursor is visible over dropdowns fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,10 @@ body {
   padding: 0;
 }
 
+.backface {
+  -webkit-backface-visibility: hidden;
+}
+
 input[type="file"]::-webkit-file-upload-button {
   display: none; /* Скрыть встроенную кнопку */
 }
